worked on the landing page

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,5 +1,5 @@
 
-  <div class="page-header section-dark" style="background-image: url('assets/img/antoine-barres.jpg')">
+  <div class="page-header section-dark" style="background-image: url('assets/img/lovely.png')">
       <div class="filter"></div>
       <div class="content-center">
           <div class="container">
@@ -18,7 +18,7 @@
                   </div>
                   <br>
                   <br>
-                  <p class="but text-center"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A" class="header-but" target="_blank">EXPERIENCE THE FATHER'S LOVE</a></p>
+                  <p class="but text-center" ><a href="javascript:void(0)" (click)="scrollMe()" class="header-but">EXPERIENCE THE FATHER'S LOVE</a></p>
               </div>
 
               
@@ -28,7 +28,7 @@
 
   </div>
  
-  <div class="divs" style="padding: 5em 0 10em 0">
+  <div class="divs" id="welcome" style="padding: 5em 0 10em 0; background: #416FAE; color: #fff !important;">
     <h3 class="text-center mb-2">WELCOME TO LAPIS LAZULI MINISTRIES</h3>
     <div class="container">
         <div class="text-center">
@@ -41,23 +41,35 @@
         </div>
     </div>
 </div>
+<div class="">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+       <div class="col-md-3 mini" id="mini1">
+         <h3>Lapis Lazuli Ministries Radio</h3>
+         <br>
+         <br>
+         <p class="but mg"><a href="/">LISTEN NOW</a></p>
+       </div>
+       <div class="col-md-3 mini" id="mini2">
+         <div class="layer"></div>
+         
+          <h3>Lapis Lazuli Healing and Prophetic Ministries</h3>
 
-<div class="divs" style="background-color: #222222; padding: 5em 0 10em 0">
-  <div class="container text-center">
-    <h3 class="mb-2" style="color: #fff">TEACHINGS</h3>
-    <div class="row">
-      <div class="col-md-4 embed-responsive embed-responsive-16by9">
-       <div> <iframe width="560" height="315" src="https://www.youtube.com/embed/GDrtT_HZ6YE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      </div>
-      <div class="col-md-4 embed-responsive embed-responsive-16by9">
-        <div><iframe width="560" height="315" src="https://www.youtube.com/embed/T8Rw-P8aA7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-      </div>
-      <div class="col-md-4 embed-responsive embed-responsive-16by9">
-        <div>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/kbMwTOOiTp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-      </div>
-      
+          <p class="but mg"><a href="/">LEARN MORE</a></p>
+         
+       </div>
+       <div class="col-md-3 mini" id="mini3">
+         <h3>Lapis Lazuli  Ministries Resources</h3>
+         <br>
+         <br>
+         <p class="but mg"><a href="/">EXPLORE MORE</a></p>
+       </div>
+       <div class="col-md-3 mini" id="mini4">
+         <h3>Conferences and Events</h3>
+         <br>
+         <br>
+         <p class="but mg"><a href="/">LEARN MORE</a></p>
+       </div>
     </div>
   </div>
 </div>
@@ -88,7 +100,7 @@
       </div>
   </div> <!-- end of more about us -->
 
-  <div class="divs">
+  <div class="divs" style="display: none;">
    <div class="container">
     <div class="row">
       <div class="col-md-3">
@@ -177,38 +189,27 @@
     </div>
       </div>
   </div>
-  <div class="">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-           <div class="col-md-3 mini" id="mini1">
-             <h3>Lapis Lazuli Ministries Radio</h3>
-             <br>
-             <br>
-             <p class="but mg"><a href="/">LISTEN NOW</a></p>
-           </div>
-           <div class="col-md-3 mini" id="mini2">
-             <div class="layer"></div>
-             
-              <h3>Lapis Lazuli Healing and Prophetic Ministries</h3>
-
-              <p class="but mg"><a href="/">LEARN MORE</a></p>
-             
-           </div>
-           <div class="col-md-3 mini" id="mini3">
-             <h3>Lapis Lazuli  Ministries Resources</h3>
-             <br>
-             <br>
-             <p class="but mg"><a href="/">EXPLORE MORE</a></p>
-           </div>
-           <div class="col-md-3 mini" id="mini4">
-             <h3>Conferences and Events</h3>
-             <br>
-             <br>
-             <p class="but mg"><a href="/">LEARN MORE</a></p>
-           </div>
+  
+  <div class="divs" style="background-color: #222222; padding: 5em 0 10em 0">
+    <div class="container text-center">
+      <h3 class="mb-2" style="color: #fff">TEACHINGS</h3>
+      <div class="row">
+        <div class="col-md-4 embed-responsive embed-responsive-16by9">
+         <div> <iframe width="560" height="315" src="https://www.youtube.com/embed/GDrtT_HZ6YE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </div>
+        <div class="col-md-4 embed-responsive embed-responsive-16by9">
+          <div><iframe width="560" height="315" src="https://www.youtube.com/embed/T8Rw-P8aA7k" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        </div>
+        <div class="col-md-4 embed-responsive embed-responsive-16by9">
+          <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kbMwTOOiTp0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+        </div>
+        
       </div>
+    </div>
   </div>
+
   <div class="divs bg-grey" id="app">
       <div class="container">
           <div class="row">
