--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -135,6 +135,9 @@ h4{
 
 .header-but{
     background-color: #ffffff;
+    border: 2px solid #416FAE;
+    // position: relative !important;
+    // z-index: 99999 !important;
 }
 
 .but> a{
