--- a/src/app/pages/trustees/trustees.component.html
+++ b/src/app/pages/trustees/trustees.component.html
@@ -4,11 +4,11 @@
 
 <div class="container">
     <h3>Meet Our Trustees</h3>
-    <p>Find out more about our Board of Trustees</p>
+    <p>Find out more about our Trustees</p>
 
     <div class="row mt-5" style="margin-top: 5em;">
         <div class="col-md-4">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <img class="card-img-top" src="assets/img/andy.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h3>Rev. Andy Keighley </h3>
@@ -16,7 +16,62 @@
                 </div>
               </div>
         </div>
-        <div class="col-md-4"></div>
-        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/img/jane.png" alt="Card image cap">
+                <div class="card-body">
+                    <h3>Precious and Jane Omuku                    </h3>
+                  <p class="card-text">Precious and Jane Omuku have a burden and work for a united and living body of Christ that operates in the power of the Holy Spirit; a Church which brings about change in the market place. Precious is an Anglican priest who serves as an Associate Priest in the Nigerian Chaplaincy, London, and St Lawrence Church, Morden, Surrey. Jane has a lay ministry.</p>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/img/trish.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h3>Trish Riley </h3>
+                  <p class="card-text">Trish has a passion for reconnecting hearts back to God the Father, God the Son and God the Holy Spirit through Bethelsozo. She seeks out those who require emotional healing and brings release from bondage. She is blessed with two beautiful daughters and five grand children. Trish is currently the Finance and Office Manager at Holy Trinity Swiss Cottage. She was formerly Assistant Accountant at Hilton College South Africa.</p>
+                </div>
+              </div>
+        </div>
+    </div> <!-- end of first row -->
+    <div class="row mt-5">
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/img/trish.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h3>Alero Ayida-Otobo</h3>
+                  <p class="card-text">Alero Ayida-Otobo is a Transformation Strategist with invaluable understanding of Sector-wide reforms in Africa. She is passionate about reforming educational and health systems and transforming individuals and institutions. She was also for four years, a Lead Specialist for Education Policy under the Education Sector Support Programme for Nigeria (ESSPIN), a programme funded by the United Kingdom Department for International development (DfID).
+
+                    She is the Founder of Incubator Africa, a Development Agency operating on the African Continent that mobilizes and equips Africans to collaborate and actively participate in strategic reform activities.
+                    
+                    She is passionate about establishing the Kingdom in the Marketplace. She is an author of Reformer Arise and loves to travel. Alero has three beautiful children whom she fondly calls her “Treasures”.</p>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/img/ayida.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h3>Alero Ayida-Otobo</h3>
+                  <p class="card-text">Alero Ayida-Otobo is a Transformation Strategist with invaluable understanding of Sector-wide reforms in Africa. She is passionate about reforming educational and health systems and transforming individuals and institutions. She was also for four years, a Lead Specialist for Education Policy under the Education Sector Support Programme for Nigeria (ESSPIN), a programme funded by the United Kingdom Department for International development (DfID).
+
+                    She is the Founder of Incubator Africa, a Development Agency operating on the African Continent that mobilizes and equips Africans to collaborate and actively participate in strategic reform activities.
+                    
+                    She is passionate about establishing the Kingdom in the Marketplace. She is an author of Reformer Arise and loves to travel. Alero has three beautiful children whom she fondly calls her “Treasures”.</p>
+                </div>
+              </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card" style="width: 20rem;">
+                <img class="card-img-top" src="assets/img/gubby.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h3>Dr. Gubby Ayida                    </h3>
+                  <p class="card-text">Gubby Ayida (GA) is a Consultant Obstetrician and Gynecologist at Chelsea and Westminster Hospital in London UK. With a background in NHS management and clinical leadership, Gubby Ayida is Associate Medical Director for Strategic Programmes for the Hospital.
+
+                    Gubby Ayida is also Founder/CEO of the Women’s Wellness Centre (WWC) a high end private healthcare facility that caters to all aspects of women’s health.  She serves on the Board of Friendship Bible Fellowship Ministry (FBFM) and is dedicated to connecting women with each other, their community and God through evangelism, leadership, discipleship and prayer. GA has been partnering with Lapis Lazuli Ministries since its inception. </p>
+                </div>
+              </div>
+        </div>
     </div>
 </div>
