--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -23,7 +23,8 @@
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-danger dropdown-menu-right">
                         <a class="dropdown-item" href="/#/about">About us</a>
                         <a class="dropdown-item" href="/#/about">Mission, Vision and Aim</a>
-                        <a class="dropdown-item" href="/#/founders">Founders</a>  
+                        <a class="dropdown-item" href="/#/founders">Founders</a>
+                        <a class="dropdown-item" href="/#/trustees">Trustees</a>   
                     </div>
                 </div>
             </li>
