--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -3,14 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <h5>RESOURCES</h5>
-                    <ul style="text-decoration-style: none;">
-                        <li>eNewsletter</li>
-                        <li>Blog</li>
-                        <li><a routerLink="/contact"> Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-3">
+                    <h5>MORE ABOUT US</h5>
                     <ul>
                         <li>What we are about</li>
                         <li>Vision, Missions and Aims</li>
@@ -18,16 +11,27 @@
                     </ul>
                 </div>
                 <div class="col-md-3">
+                    <h5>LAPIS LAZULI MINISTRIES</h5>
                     <ul>
                         <li> <a href="https://lapislmradio.org/">   Lapis LM Radio</a></li>
-                        <li><a href=""> Women Minsitry</a></li>
+                        <li><a href=""> eNewsletter</a></li>
+                        <li><a href="">Teachings</a></li>
                        <li> <a routerLink="/founders">Founders</a> </li>
                     </ul>
                 </div>
                 <div class="col-md-3">
+                    <h5>RESOURCES</h5>
+                    <ul style="text-decoration-style: none;">
+                        <li>eNewsletter</li>
+                        <li>Blog</li>
+                        <li><a routerLink="/contact"> Contact Us</a></li>
+                    </ul>
+                </div>
+               
+                <div class="col-md-3">
                     <h5>Subscribe to our newsletter.</h5>
-                    <input type="text" name="" id="" placeholder="example@gmail.com" class="form-control"> <br>
-                    <button class="btn btn-danger btn-round">Subscribe</button>
+                    <input type="text" name="" id="" placeholder="example@gmail.com" class="form-control">
+                    <button class="btn btn-round">Subscribe</button>
                 </div>
             </div>
         </div>
