--- a/src/assets/sass/paper-kit/_examples.scss
+++ b/src/assets/sass/paper-kit/_examples.scss
@@ -250,7 +250,7 @@
 }
 .moving-clouds{
     position: absolute;
-    z-index: 1;
+    // z-index: 1;
     bottom: 0;
     left: 0;
     width: 250.625em;
