--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -12,36 +12,36 @@
     <div class="row">
         <div class="col-md-6 shadow p-5 mb-5 bg-white rounded" >
             <div>
-                <form>
+                <form [formGroup]="contact_form" (ngSubmit)="createContact(contact_form.value)">
                     <div class="row mb-4">
                       <div class="col">
                           <label for="">First name</label>
-                        <input type="text" class="form-control" placeholder="First name">
+                        <input type="text" class="form-control" formControlName="firstname" placeholder="First name">
                       </div>
                       <div class="col">
                           <label for="">Last name</label>
-                        <input type="text" class="form-control" placeholder="Last name">
+                        <input type="text" class="form-control" formControlName="lastname" placeholder="Last name">
                       </div>
                     </div>
                     <div class="row mb-4">
                         <div class="col">
                             <label for="">Email</label>
-                          <input type="email" class="form-control" placeholder="Email">
+                          <input type="email" class="form-control" formControlName="email" placeholder="Email">
                         </div>
                         <div class="col">
                             <label for="">Phone</label>
-                          <input type="text" class="form-control" placeholder="Phone">
+                          <input type="text" class="form-control" formControlName="phone" placeholder="Phone">
                         </div>
                       </div>
                       <div class="row">
                         <div class="col">
                             <label for="">Message:</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            <textarea class="form-control" formControlName="message" id="exampleFormControlTextarea1" rows="3"></textarea>
                         </div>
                       </div>
                       <div class="row">
                         <div class="col-auto my-1">
-                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <button type="submit"  class="btn btn-primary">Submit</button>
                           </div>
                       </div>
                   </form>
