--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -170,7 +170,7 @@
   <div class="divs bg-grey">
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <h5>LAPIS LM RADIO</h5>
                 <h3>Uninterrupted worship, teaching, 
                   prayer and so much more! 🎙️</h3>
@@ -179,11 +179,12 @@
                       into which He has called us 🙏
                       God Bless You</p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-6 embed-responsive embed-responsive-16by9">
                 <img src="" alt="">
+                <iframe class="embed-responsive-item" height="400px" width="650px" scrolling="no" frameborder="0" src="https://llmradio.com/embed/weekly-program"></iframe>
                 
             </div>
-            <div class="col-md-4 embed-responsive embed-responsive-16by9">
+            <div class="col-md-3 embed-responsive embed-responsive-16by9">
                 <iframe frameborder="0" width="280" height="216" src="https://llmradio.com/embed/player?stream=auto&amp;title=Now Playing"></iframe>
             </div>
     </div>
