--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -48,9 +48,9 @@
                   CONTACT US
               </a>
           </li>
-            <li class="nav-item" *ngIf="!isHome()">
+            <!-- <li class="nav-item" *ngIf="!isHome()">
                 <a routerLink="/donate"  class="btn btn-round" id="donate">Donate</a>
-            </li>
+            </li> -->
             <li class="nav-item" *ngIf="!isLoggedIn">
               <a routerLink="/signup"  class="btn btn-primary btn-round">Register</a>
             </li>
