--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,6 +1,51 @@
-<div class="container-fluid" id="events">
-    <div class="layer"></div>
-    <div class="container">
-        <h2 class="text-center coming">COMING SOON</h2>
+<div class="wrapper">
+    <div class="page-header page-header-xs" data-parallax="true" style="background-image: url('assets/img/abuja.jpg');">
+        <div class="filter"></div>
+    </div>
+    <div class="section profile-content">
+            <div class="divs bg-grey">
+                <div class="container">
+                    <!-- <div class="owner">
+                        <div class="avatar">
+                            <img src="./assets/img/fabio-mangione.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
+                        </div>
+                        <div class="name">
+                            <h4 class="title">Admin Dashboard<br /></h4>
+                        </div>
+                    </div> -->
+                    <div class="row">
+                      <div class="col-md-12">
+          
+                         <div class="container-fluid">
+                          <div class="row">
+                            <div  class="col-md-3" *ngFor="let item of events">
+                                <div  class="card" data-background-color="red">
+                                    <!-- <div class="card-header"> -->
+                                        <img  alt="..." class=" card-img-top img-raised"   src={{item?.banner}}>
+                                    <!-- </div> -->
+                                   <div  class="card-body">
+                                      <h6  class="category-social"><i  class="fa fa-fire"></i> {{item?.title}} </h6>
+                                      <p  class="card-description"> {{item?.description | slice:0:20}} </p>
+                                      <div  class="card-footer">
+                                         <div  class="author">
+                                            <span style="">Event Date:</span>
+                                            <span >{{item?.event_date | date}}</span>
+                                        </div>
+                                        <!-- class="stats stats-right" -->
+                                         <span (click)="attend()" class="btn-outline-danger btn-sm" style="cursor: pointer;">
+                                             Attend </span>
+                                             <span  class="btn-outline-danger btn-sm" style="cursor: pointer;">
+                                                View Detail
+                                            </span>
+                                      </div>
+                                   </div>
+                                </div>
+                             </div>
+                          </div>
+                         </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
     </div>
 </div>
