--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -156,14 +156,34 @@
   </div>
 
   <div class="divs">
-      <div class="container">
-          <h3 class="text-center">CONFERENCES & EVENTS</h3>
-          <p class="text-center">Catch up on our latest events and conferences</p>
-          <p class="text-center">Loading...</p>
-          <div class="row">
-              <div class="col-md-4"></div>
-              <div class="col-md-4"></div>
-              <div class="col-md-4"></div>
+    <h3 class="text-center">CONFERENCES & EVENTS</h3>
+    <p class="text-center">Catch up on our latest events and conferences</p><br>
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div  class="col-md-3" *ngFor="let item of events">
+            <div  class="card" data-background-color="red">
+                <!-- <div class="card-header"> -->
+                    <img  alt="..." class=" card-img-top img-raised"   src={{item?.banner}}>
+                <!-- </div> -->
+               <div  class="card-body">
+                  <h6  class="category-social"><i  class="fa fa-fire"></i> {{item?.title}} </h6>
+                  <p  class="card-description"> {{item?.description | slice:0:20}} </p>
+                  <div  class="card-footer">
+                     <div  class="author">
+                        <span style="">Event Date:</span>
+                        <span >{{item?.event_date | date}}</span>
+                    </div>
+                    <!-- class="stats stats-right" -->
+                     <span (click)="attend()" class="btn-outline-danger btn-sm" style="cursor: pointer;">
+                         Attend </span>
+                         <span  class="btn-outline-danger btn-sm" style="cursor: pointer;">
+                            View Detail
+                        </span>
+                  </div>
+               </div>
+            </div>
+         </div>
+       
           </div>
       </div>
   </div>
