new update for cpanel

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -55,20 +55,20 @@
          
           <h3>Lapis Lazuli Healing and Prophetic Ministries</h3>
 
-          <p class="but mg"><a href="/">LEARN MORE</a></p>
+          <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A">LEARN MORE</a></p>
          
        </div>
        <div class="col-md-3 mini" id="mini3">
          <h3>Lapis Lazuli  Ministries Resources</h3>
          <br>
          <br>
-         <p class="but mg"><a href="/">EXPLORE MORE</a></p>
+         <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A">EXPLORE MORE</a></p>
        </div>
        <div class="col-md-3 mini" id="mini4">
          <h3>Conferences and Events</h3>
          <br>
          <br>
-         <p class="but mg"><a href="/">LEARN MORE</a></p>
+         <p class="but mg"><a href="https://lapislm.org/events/">LEARN MORE</a></p>
        </div>
     </div>
   </div>
