--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -29,12 +29,12 @@
                 </div>
             </li>
             <li class="nav-item" >
-                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="/teachings" >
+                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="https://www.youtube.com/watch?v=GDrtT_HZ6YE&list=PLkhST-WOEF3cM_Yywry_NhiiobfHcD5gu" >
                    Teachings
                 </a>
             </li>
             <li class="nav-item" >
-                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="/events" >
+                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://lapislm.org/events/" >
                    EVENTS
                 </a>
             </li>
