--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -8,10 +8,10 @@
         <div class="col-md-3">
           <h5>MORE ABOUT US</h5>
           <ul>
-            <li><a routerLink="/founders">Founders</a></li>
+            
             <li>Vision, Missions and Aims</li>
             <li><a routerLink="/founders">Founders</a></li>
-            <li><a routerLink="/donate">Donate</a></li>
+            <!-- <li><a routerLink="/donate">Donate</a></li> -->
           </ul>
         </div>
         <div class="col-md-3">
@@ -25,8 +25,7 @@
         <div class="col-md-3">
           <h5>RESOURCES</h5>
           <ul style="text-decoration-style: none">
-            <li>eNewsletter</li>
-            <li>Blog</li>
+            <li> <a href="https://lapislm.org/events/">Events</a> </li>
             <li><a routerLink="/contact"> Contact Us</a></li>
           </ul>
         </div>
