--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -53,7 +53,7 @@
             +234 906 390 1916 <br>
             (+44)7904 125 631</p>
             <br>
-            <p><strong>Address:</strong> 10A Norman Williams Street,<br>
+            <p><strong>Address:</strong> 10 Norman Williams Street,<br>
                 off Keffi Street, Ikoyi,<br>
                 Lagos, Nigeria.</p>
                 <p><strong>Office hours:</strong> Monday – Friday.   9am-4pm.</p>
