--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -48,27 +48,27 @@
          <h3>Lapis Lazuli Ministries Radio</h3>
          <br>
          <br>
-         <p class="but mg"><a href="/">LISTEN NOW</a></p>
+         <p class="but mg"><a target="_blank" href="https://lapislmradio.org/">LISTEN NOW</a></p>
        </div>
        <div class="col-md-3 mini" id="mini2">
          <div class="layer"></div>
          
           <h3>Lapis Lazuli Healing and Prophetic Ministries</h3>
 
-          <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A">LEARN MORE</a></p>
+          <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A" target="https://lapislmradio.org/">LEARN MORE</a></p>
          
        </div>
        <div class="col-md-3 mini" id="mini3">
          <h3>Lapis Lazuli  Ministries Resources</h3>
          <br>
          <br>
-         <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A">EXPLORE MORE</a></p>
+         <p class="but mg"><a href="https://www.youtube.com/channel/UCxISNmDZQ2LeCz-ZjkAP_2A" target="_blank">EXPLORE MORE</a></p>
        </div>
        <div class="col-md-3 mini" id="mini4">
          <h3>Conferences and Events</h3>
          <br>
          <br>
-         <p class="but mg"><a href="https://lapislm.org/events/">LEARN MORE</a></p>
+         <p class="but mg"><a href="https://lapislazuliministries.org/events/">LEARN MORE</a></p>
        </div>
     </div>
   </div>
@@ -90,7 +90,7 @@
                 faulty foundations, uniting churches and ministeries, by breaking down walls to
                 celebrating all that unite, and in this way,
                 impact the spiritual state of Nations.</p> -->
-                <p class="but"><a href="/#/about" class="">More about our mission</a></p>
+                <p class="but"><a routerLink="/about" class="" target="_blank">More about our mission</a></p>
 
               
 
@@ -227,6 +227,23 @@
           </div>
         </div>
         
+      </div>
+  
+      <br>
+      <p class="but text-center"><a href="https://www.youtube.com/watch?v=fgG1rpL-5Yg&list=PLkhST-WOEF3e8tjH0CD3gcuRNbj0_bSQJ" target="_blank">Watch More Teachings</a></p>
+    </div>
+  </div>
+  <div class="divs bg-grey">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLSc4EUGBqXrUNM8CzBBq9Zh4GaaLFJ6yMlk1KZL9Ei2wqlaT3A/viewform?embedded=true" width="640" height="1700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+
+        </div>
+        <div class="col-md-6 embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://docs.google.com/forms/d/e/1FAIpQLScLMaqyhVOkgn7qSjn7OYf42TmRQwhxNiYfEjDNI0-P72U4hg/viewform?embedded=true" width="640" height="1700" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </div>
       </div>
     </div>
   </div>
