--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -21,20 +21,20 @@
                 <div ngbDropdown class="dropdown" placement="bottom-left">
                     <a class="nav-link" id="dropdownBasic1" ngbDropdownToggle>About Us</a>
                     <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="dropdown-danger dropdown-menu-right">
-                        <a class="dropdown-item" href="/#/about">About us</a>
-                        <a class="dropdown-item" href="/#/about">Mission, Vision and Aim</a>
-                        <a class="dropdown-item" href="/#/founders">Founders</a>
-                        <a class="dropdown-item" href="/#/trustees">Trustees</a>   
+                        <a class="dropdown-item" routerLink="/about">About us</a>
+                        <a class="dropdown-item" routerLink="/about">Mission, Vision and Aim</a>
+                        <a class="dropdown-item" routerLink="/founders">Founders</a>
+                        <a class="dropdown-item" routerLink="/trustees">Trustees</a>   
                     </div>
                 </div>
             </li>
             <li class="nav-item" >
-                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" routerLink="https://www.youtube.com/watch?v=GDrtT_HZ6YE&list=PLkhST-WOEF3cM_Yywry_NhiiobfHcD5gu" >
+                <a class="nav-link" rel="tooltip" target="_blank" title="" data-placement="bottom" href="https://www.youtube.com/c/LapisLazuliMinistries/playlists" >
                    Teachings
                 </a>
             </li>
             <li class="nav-item" >
-                <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://lapislm.org/events/" >
+                <a class="nav-link" rel="tooltip" title="" data-placement="bottom" href="https://lapislazuliministries.org/events" >
                    EVENTS
                 </a>
             </li>
