--- a/src/assets/sass/paper-kit/_typography.scss
+++ b/src/assets/sass/paper-kit/_typography.scss
@@ -39,7 +39,7 @@ h6, .h6{
 p{
     font-size: 16px !important;
     line-height: $line-height-general;
-    margin-bottom: 5px;
+    // margin-bottom: 5px;
     font-weight: 200;
     font-family: 'Rubik', sans-serif;
 }
